# nRPC

./: Cargo.toml  README.md
nrpc/: Cargo.toml
nrpc-build/: Cargo.toml
nrpc-build/src/: builder.rs  lib.rs  preprocessor.rs  service_gen.rs  token_gen_traits.rs
nrpc-codegen-test/: Cargo.toml  build.rs
nrpc-codegen-test/proto/: helloworld.proto
nrpc-codegen-test/src/: main.rs
nrpc/src/: lib.rs  service.rs  stream_utils.rs
