[package]
name = "nrpc-build"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NGnius/nRPC"
readme = "../README.md"
description = "Yet another remote procedure call library - codegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gRPC/protobuf
protox = "0.3"
prost-build = "0.11"
prost-types = "0.11"

# code gen
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

nrpc = { version = "0.6", path = "../nrpc" }
