[package]
name = "nrpc-codegen-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
nrpc = { version = "0.1", path = "../nrpc" }
bytes = "1"
async-trait = "0.1"
tokio = { version = "*", features = [ "full" ] }

[build-dependencies]
nrpc-build = { version = "0.1", path = "../nrpc-build" }
