[package]
name = "nrpc"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NGnius/nRPC"
readme = "../README.md"
description = "Yet another remote procedure call library"

[dependencies]
prost = "0.11"
bytes = "1"
async-trait = "0.1"
futures = "0.3"

[features]
default = ["client-send", "server-send"]
client-send = []
server-send = []
